<resources>
    <string name="app_name" translatable="false">TV Showtime</string>
    <string name="pref_daily_reminder" translatable="false">com.widyatama.tvshowtime.pref_daily_reminder</string>
    <string name="pref_language" translatable="false">com.widyatama.tvshowtime.pref_language</string>
    <string name="pref_theme" translatable="false">com.widyatama.tvshowtime</string>

    <string name="dummy_movie_title" translatable="false">Title Movie Here</string>
    <string name="dummy_imdb" translatable="false">0.0</string>
    <string name="dummy_rating" translatable="false">⭐️ %.1f</string>
    <string name="dummy_desc" translatable="false">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="dummy_language" translatable="false">English</string>
    <string name="_0" translatable="false">0%</string>

    <string name="search_tv_shows">Search TV Show …</string>
    <string name="search">Search</string>
    <string name="tv_show_thumbnail">TV Show Thumbnail</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="voting">(%d votes)</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
    <string name="app_icon">App Icon</string>
    <string name="change_language">🇬🇧 \tEnglish</string>
    <string name="favorite">Favorite</string>
    <string name="favorited">Favorited</string>
    <string name="message_fail_favorite">Failed adding to Favorite, Try Again</string>
    <string name="message_fail_add_favorite">Failed to delete from favorite, try again !</string>
    <string name="back_button">Back Button</string>
    <string name="toolbar_background">Toolbar Background</string>
    <string name="similar_poster">TV Show Poster Recommendation</string>
    <string name="similar_message">Recommendation for you</string>
    <string name="message_similar_not_found">Recommendation not found</string>
    <string name="play_video">Play Video</string>
    <string name="toolbar_fade">toolbar fade</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="unknown">Unknown</string>
    <string name="d_minutes">%d Minutes</string>
    <string name="no_favorited_shows">No favorited TV shows</string>
    <string name="my_favorite_shows">My Favorite TV Shows</string>
    <string name="summary_daily">Get daily reminder</string>
    <string name="daily_content_text">Hey! checkout the latest tv shows</string>
    <string name="setting">Settings</string>
    <string name="setting_preference">Preference Settings</string>
    <string name="no_tv_show_found">No TV Show(s) found</string>
    <string name="empty_query">Search query can\'t be empty !</string>
    <string name="daily">Daily</string>
    <string name="summay_dark">Turn this on if you are ready for the \'dark side\'</string>
    <string name="title_dark">Enable Dark Mode</string>
    <string name="last_air_date">Last Air Date : %1$s</string>
    <string name="production">Production</string>
    <string name="daily_notification_active">Daily Notification is Activated</string>
    <string name="daily_notification_nonactive">Daily Notification is Deactivated</string>
    <string name="notification">Notification</string>
    <string name="display">Display</string>
    <string name="what_they_say">Responses</string>
</resources>
