<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/language">
        <Preference
            android:key="@string/pref_language"
            android:title="@string/change_language" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_daily_reminder"
            android:summary="@string/summary_daily"
            android:title="@string/daily" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/display">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_theme"
            android:summary="@string/summay_dark"
            android:title="@string/title_dark"/>
    </PreferenceCategory>
</PreferenceScreen>