<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/detailActivityLinearLayoutCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/labelProduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production"
            android:textStyle="bold"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/detailActivityTextViewProduction" />

        <TextView
            android:id="@+id/labelLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textStyle="bold"
            android:layout_below="@+id/labelProduction"
            android:layout_alignEnd="@+id/labelProduction"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/detailActivityTextViewLanguage" />

        <TextView
            android:id="@+id/labelRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textStyle="bold"
            android:layout_below="@+id/labelLanguage"
            android:layout_alignEnd="@+id/labelLanguage"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/detailActivityTextViewRating" />

        <TextView
            android:id="@+id/labelDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/labelRating"
            android:layout_alignEnd="@id/labelLanguage"
            android:layout_alignBottom="@+id/detailActivityTextViewDuration" />

        <TextView
            android:id="@+id/detailActivityTextViewProduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/labelProduction" />

        <TextView
            android:id="@+id/detailActivityTextViewLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/detailActivityTextViewProduction"
            android:layout_toEndOf="@+id/labelLanguage" />

        <TextView
            android:id="@+id/detailActivityTextViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_imdb"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/detailActivityTextViewLanguage"
            android:layout_toEndOf="@id/labelRating" />

        <TextView
            android:id="@+id/detailActivityTextViewDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/detailActivityTextViewRating"
            android:layout_toEndOf="@id/labelDuration" />
    </RelativeLayout>
</LinearLayout>
