<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SearchActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/searchActivityBackButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_back_black"
                android:layout_gravity="center"
                android:contentDescription="@string/back_button"
                android:layout_marginStart="8dp"/>

            <EditText
                android:id="@+id/searchActivityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:hint="@string/search_tv_shows"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text|textCapWords"
                android:textSize="15sp"
                android:padding="10dp"
                android:textColor="?attr/textHeaderColor"
                android:textColorHint="@android:color/darker_gray"
                app:layout_scrollFlags="snap|scroll|enterAlways"
                tools:targetApi="o" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/searchActivityRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <TextView
            android:id="@+id/empty_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_tv_show_found"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/searchActivityProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>